--- a/prcalendario/package.json
+++ b/prcalendario/package.json
@@ -10,6 +10,7 @@
     "bootstrap-icons": "^1.11.3",
     "date-fns": "^4.1.0",
     "moment": "^2.30.1",
+    "mongoose": "^8.8.3",
     "react": "^18.3.1",
     "react-big-calendar": "^1.15.0",
     "react-bootstrap": "^2.10.5",
